[EME] Crash pruning a back/forward-cached page that owns an open MediaKeySession https://bugs.webkit.org/show_bug.cgi?id=315849

Reviewed by Xabier Rodriguez-Calvar.

Invoking session.sessionClosed during document teardown can trigger an
assertion in a deferred promise (JSDOMPromiseDeferred --
!activeDOMObjectsAreSuspended() ||
scriptExecutionContext()->eventLoop().isSuspended()).

By queueing it, we can ensure the task is dropped if the event loop is
stopped.

Test: media/encrypted-media/mock-MediaKeySession-backforwardcache-prune-crash.html

* LayoutTests/media/encrypted-media/mock-MediaKeySession-backforwardcache-prune-crash-expected.txt: Added.
* LayoutTests/media/encrypted-media/mock-MediaKeySession-backforwardcache-prune-crash.html: Added.
* LayoutTests/media/encrypted-media/resources/mock-MediaKeySession-backforwardcache-prune-helper.html: Added.
* Source/WebCore/Modules/encryptedmedia/MediaKeySession.cpp:
(WebCore::MediaKeySession::stop):

Canonical link: https://commits.webkit.org/314352@main