Source/WebCore/Modules/encryptedmedia/MediaKeySession.cpp
@@ -861,8 +861,14 @@ void MediaKeySession::stop()
         if (!weakThis)
             return;
 
-        ALWAYS_LOG(logIdentifier, "::lambda, closed");
-        sessionClosed();
+        // closeSession() may invoke this callback synchronously (e.g. the Thunder backend), and stop() runs during
+        // document teardown while the event loop has already been marked ready-to-stop. Resolving the closed promise
+        // synchronously here would violate DeferredPromise's suspended-context invariant. Defer to the event loop,
+        // mirroring close(); the task is cleanly dropped if the event loop is already stopped.
+        queueTaskKeepingObjectAlive(*protectedThis, TaskSource::Networking, [logIdentifier](auto& session) {
+            ALWAYS_LOG_WITH_THIS(&session, logIdentifier, "::task, closed");
+            session.sessionClosed();
+        });
     });
 }
 
